--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>น้องฮีลใจ</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -19,7 +19,7 @@
         #chat-container {
             width: 100%;
             max-width: 500px;
-            background: #fff;
+            background: #d06161;
             border-radius: 12px;
             box-shadow: 0 5px 25px rgba(0, 0, 0, 0.05);
             overflow: hidden;
@@ -29,7 +29,7 @@
         }
 
         #chat-header {
-            background: #fff;
+            background: #4394e6;
             padding: 20px;
             color: #333;
             font-weight: 600;
