--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>น้องฮีลใจ</title>
+    <title>น้องแมมมอส</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -351,7 +351,7 @@
 
             <textarea id="mood-reason" rows="3" placeholder="เล่าให้ฟังหน่อยครับว่าทำไม... (ไม่บังคับ)"></textarea>
 
-            <button id="start-chat-btn" onclick="submitMood()">เริ่มคุยกับน้องฮีลใจ</button>
+            <button id="start-chat-btn" onclick="submitMood()">เริ่มคุยกับน้องมอมมอส</button>
         </div>
     </div>
 
@@ -367,7 +367,7 @@
 
     <div id="chat-container">
         <div id="chat-header">
-            <span id="header-title">น้องฮีลใจ 🤍</span>
+            <span id="header-title">น้องแมมมอา 🤍</span>
             <button id="surprise-btn" onclick="showSurprise()" title="รับพลังบวก">🎁</button>
         </div>
         <div id="chat-box">
@@ -384,7 +384,7 @@
         import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
 
         // 🔴 API KEY (Hardcoded as per user request)
-        const API_KEY = "AIzaSyAQdcftxOGg7b4RPWD8-XLv_aoLILyJk_w";
+        const API_KEY = "AIzaSyDcG2CnGZLBTl5IWl0CXkeBTMVNpfW4Zms";
 
         const genAI = new GoogleGenerativeAI(API_KEY);
         const model = genAI.getGenerativeModel({ model: "gemini-2.5-flash" });
@@ -393,11 +393,11 @@
             history: [
                 {
                     role: "user",
-                    parts: [{ text: "คุณคือเพื่อนชื่อ 'มินิมอส' หน้าที่คือรับฟัง ให้กำลังใจ ใช้ภาษาอบอุ่น เป็นกันเอง ไม่ตัดสินคน ห้ามแนะนำทางการแพทย์" }],
+                    parts: [{ text: "คุณคือเพื่อนชื่อ 'มอมมอส' หน้าที่คือรับฟัง ให้กำลังใจ ใช้ภาษาอบอุ่น เป็นกันเอง ไม่ตัดสินคน ห้ามแนะนำทางการแพทย์" }],
                 },
                 {
                     role: "model",
-                    parts: [{ text: "เข้าใจแล้วครับ เราชื่อมินิมอส ยินดีรับฟังและอยู่ข้างๆ เสมอ มีอะไรระบายออกมาได้เลยนะ 🤍" }],
+                    parts: [{ text: "เข้าใจแล้วครับ เราชื่อมอมมอส ยินดีรับฟังและอยู่ข้างๆ เสมอ มีอะไรระบายออกมาได้เลยนะ 🤍" }],
                 },
             ],
         });
